# omnibioai-tool-images

./: .coverage  .dockerignore  .gitignore  Dockerfile  Dockerfile.new  README.md  build_all.sh  build_failed_tools.sh  build_fix_batch.sh  build_missing_sifs.sh  build_new_tools.sh  build_remaining.sh  push_to_hf.sh  pyproject.toml  requirements-test.txt
api/: server.py
dockerfiles/: Dockerfile.admet  Dockerfile.admixture  Dockerfile.admixture_ancestry  Dockerfile.agat_convert  Dockerfile.aldex2  Dockerfile.alphafold2  Dockerfile.alphafold2_monomer  Dockerfile.alphafold2_multimer  Dockerfile.alphamissense  Dockerfile.alphapept  Dockerfile.amber  Dockerfile.ancom  Dockerfile.ancombc  Dockerfile.angsd  Dockerfile.annovar  Dockerfile.anota2seq  Dockerfile.arcashla  Dockerfile.archr  Dockerfile.arriba  Dockerfile.ascat_purity  Dockerfile.atac_pipeline  Dockerfile.atacqc  Dockerfile.augustus  Dockerfile.autodock  Dockerfile.autodock_gpu  Dockerfile.bambu_assembly  Dockerfile.banksy  Dockerfile.base_with_runner  Dockerfile.battenberg_cn  Dockerfile.bayesspace  Dockerfile.baysor  Dockerfile.bbknn_integration  Dockerfile.bbtools  Dockerfile.bcftools  Dockerfile.beagle  Dockerfile.beagle5_impute  Dockerfile.bedops_merge  Dockerfile.bedtools  Dockerfile.bedtools_coverage  Dockerfile.behive_base_editing  (+425 more)
dockerfiles/FlashLFQ/: CMD.deps.json  igv_session.json
dockerfiles/rMATS/rMATS_C/: rMATSexe
dockerfiles/vep/.version/: ensembl  ensembl-compara  ensembl-variation
dockerfiles/vep/ensembl-vep-115.2-1/: vep_install
dockerfiles/vep/ensembl-vep-115.2-1/.version/: ensembl-funcgen  ensembl-io
frontend/tool-images-ui/: index.html  package-lock.json  package.json  vite.config.ts
frontend/tool-images-ui/src/: App.tsx  api.ts  index.css  types.ts
frontend/tool-images-ui/src/components/: DetailPanel.tsx  IconNav.tsx  Sidebar.tsx  StatsBar.tsx  ToolTable.tsx  TopBar.tsx
omnibioai_tool_images.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: push_omnibioai_images.sh  upload_sifs_azure.sh  upload_sifs_s3.sh
tests/: test_api_server.py  test_dockerfiles.py
